--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  text-align: left;
+  padding: 30px;
+  background-color: floralwhite;
 }
 
 ul {
@@ -8,8 +10,8 @@ ul {
 
 li {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
   gap: 0.5rem;
 }
 
@@ -20,4 +22,29 @@ li {
 
 input:checked+span {
   text-decoration: line-through;
+}
+
+.todo {
+  align-items: center;
+  display: flex;
+  font-size: 18px;
+  justify-content: space-between;
+}
+
+input {
+  width: 300px;
+  height: 38px;
+  padding-bottom: 0.3rem;
+}
+
+.btnUser {
+  float: right;
+  color: red;
+}
+
+.user {
+  float: right;
+
+  width: 200px;
+  height: 38px;
 }
