//Implemented the Input component

--- a/todo_new/src/components/SignUpForm/SignUpForm.css
+++ b/todo_new/src/components/SignUpForm/SignUpForm.css
@@ -5,7 +5,7 @@
     align-items: top;
     min-height: 6vh;
     width: 100%;
-    background: #0483f2;
+    background: #cdd6d2;
     padding-top: 6px;
 }
 
