--- a/todo_new/src/components/Button.css
+++ b/todo_new/src/components/Button.css
@@ -1,5 +1,5 @@
 .enter {
-    height: 40px;
+    height: 30px;
     width: 100px;
     font-size: 12px;
     background: none;
@@ -8,6 +8,18 @@
     margin-right: 5px;
     margin-left: 5px;
     margin-top: 16px;
+}
+
+.enter_in {
+    height: 30px;
+    width: 100px;
+    font-size: 12px;
+    background: none;
+    border: 1px solid whitesmoke;
+    color: rgb(65, 18, 233);
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-top: 18px;
 }
 
 .enter:hover {
