--- a/todo_new/src/components/Input.css
+++ b/todo_new/src/components/Input.css
@@ -1,6 +1,6 @@
 .input {
     box-sizing: border-box;
-    height: 40px;
+    height: 30px;
     width: 100%;
     padding: 12px;
     border: 1px solid #EBEBEB;
@@ -36,7 +36,7 @@
 .inputLabel {
     font-weight: 600;
     font-size: 10px;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
 
 .inputError {
